# book-reviews-graphql

./: .gitignore  Dockerfile  README.md  compose.yaml
app/: Dockerfile  graphql_router.py  main.py  pyproject.toml
app/api/v1/routers/: author.py  book.py  review.py
app/core/: config.py  mongo_storage.py  storage.py
app/graph_dependencies/: resolver.py  schema.py
app/graphql_schema/: __init__.py  queries.py  resolvers.py  types.py
app/graphql_schema/resolvers/: __init__.py  author.py  book.py  review.py  user.py
app/schemas/: author.py  base.py  book.py  review.py
